--- a/signup.html
+++ b/signup.html
@@ -5,37 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 align="center">Create Your Account</h1>
     <table border="0" align="center" cellspacing="2" cellpadding="8">
         <tr>
-            <td>Name</td>
+            <td><h4>Name</h4></td>
             <td>
                 <input type="text" placeholder="Enter your name" id="n1">
             </td>
         </tr>
         <tr>
-            <td>Email</td>
+            <td><h4>Email</h4></td>
             <td>
                 <input type="email" placeholder="Enter your email" id="e1">
             </td>
         </tr>
         <tr>
-            <td>Set Password</td>
+            <td><h4>Set Password</h4></td>
             <td>
                 <input type="password" placeholder="Set your password" id="p1">
             </td>
         </tr>
         <tr>
-            <td>Confirm Password</td>
+            <td><h4>Confirm Password</h4></td>
             <td>
                 <input type="password" placeholder="Confirm your password" id="p2">
             </td>
         </tr>
         <tr>
-            <td>
-                <input type="submit" value="create" onClick="create_account()">
+            <td colspan="2" align="center">
+                <input type="submit" value="Create" onClick="create_account()">
             </td>
         </tr>
     </table>
