--- a/index.html
+++ b/index.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <form onsubmit="submit_form()">
         <h1>LOGIN</h1>
-        <h4>Username</h4>
-        <input type="text" placeholder="Enter your username"> <br>
-        <h4>Password</h4>
-        <input type="password" placeholder="Enter your password"> <br><br>
-        <input type="submit" value="Login">
-        <input type="button" value="Sign Up" onClick="create()">
+        <table align="center" cellpadding="10" cellspacing="10">
+            <tr><td>
+                <h4>Username</h4>
+                <input type="text" placeholder="Enter your username" width="100"> 
+            </td></tr>
+            <tr><td>
+                <h4>Password</h4>
+                <input type="password" placeholder="Enter your password" width="100">
+            </td></tr> 
+            <tr><td>
+                <input type="submit" value="Login">
+                <input type="button" value="Sign Up" onClick="create()">
+            </td></tr>
+        </table>
     </form>
     <script type="text/javascript">
         function submit_form() {
