--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <table align="center" cellpadding="10" cellspacing="10">
             <tr><td>
                 <h4>Username</h4>
-                <input type="text" placeholder="Enter your username" width="100"> 
+                <input type="text" placeholder="Enter your username" required> 
             </td></tr>
             <tr><td>
                 <h4>Password</h4>
-                <input type="password" placeholder="Enter your password" width="100">
+                <input type="password" placeholder="Enter your password" required>
             </td></tr> 
             <tr><td>
                 <input type="submit" value="Login">
